css/general/about.css
.about-me {
    display: grid;
    grid-template-columns: 1fr 3fr;
    gap: 25px;
    margin: 15px 30px;
}

.sidebar {
    position: sticky;
    top: 35%;
    align-self: start;
}

.section {
    margin-bottom: 20px;
    background: #fff;
    padding: 25px;
    border-radius: 8px;
    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
    text-align: justify;
}

.align-right {
    display: inline-block;
    text-align: right;
}

.general-list {
    list-style: none;
    margin: 0;
    padding: 0;
}

.general-list li {
    display: flex;
    align-items: flex-start;
    gap: 15px;
    margin-left: 10px;
    margin-bottom: 12px;
    /* color: #333; */
    line-height: 1.4;
}

.general-list li::before {
    content: "";
    width: 10px;
    height: 10px;
    margin-top: 6px; 
    background: #FDD93D;
    border-radius: 50%;
    flex-shrink: 0;
    box-shadow: #FDD93D
}

.publication-list {
    padding-left: 32px;
    list-style-type: disc;
}

.publication-list li {
    line-height: 1.5;
}

.publication-list li::marker {
    color: #FDD93D;
    font-size: 1.9rem;
    vertical-align: baseline;
}

.card {
    text-align: center;
}

.card img {
    width: 120px;
    height: 120px;
    border-radius: 50%;
    object-fit: cover;
    border: 3px solid #333;
    margin-bottom: 15px;
}

.card h2 {
    margin: 10px 0 5px;
}

.text-blue {
    color: blue;
}

.links a {
    display: block;
    text-decoration: none;
    color: #333;
    margin: 8px 0;
    font-size: 16px;
    transition: 0.3s;
}

.links a:hover {
    color: #007bff;
}

/* Right section scrollable content */
.content {
    padding: 10px 20px;
    box-sizing: border-box;
}

@media (max-width: 768px) {
    .about-me {
        grid-template-columns: 1fr;
        margin: 0;
    }

    .sidebar {
        width: 80%;
        position: relative;
        top: 10px;
        z-index: -1;
    }

    .content {
        width: 85%;
        padding: 0;
    }
}

